tests/golden/type_errors/nullable_enum_pattern_non_exhaustive_variant.cd
enum Option { Some(number), None }
let value: Option? = nil;
print match value {
  nil => "nil",
  Option.Some(_) => "some",
};
