tests/golden/type_errors/nullable_enum_pattern_non_exhaustive_variant.err
Type error at 3:7: non-exhaustive match: missing Option.None
  print match value {
        ^
